--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,27 @@
-.App {
-  text-align: center;
+body {
+    font-family: Cascadia Mono;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    background-color: #1f1f1f;
+    overflow-x: hidden;
+    overflow-y: auto;
+    overscroll-behavior: none;
+    /* max-width: 600vw; */
+    height: 100vh;
+    /* background-image:
+        linear-gradient(to right, #cccccc 1px, transparent 1px),
+        linear-gradient(to bottom, #cccccc 1px, transparent 1px);
+    background-size: 50px 50px;
+    z-index: 1; */
+    /* background-image: url("./images/joystick.png"); */
+    /* background-position: 50% 50%; */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.mainContainer {
+    /* overscroll-behavior: none; */
+    width: 600%;
+    height: 100vh;
+    display: flex;
+    /* flex-wrap: nowrap; */
 }
